--- a/Sample.fxml
+++ b/Sample.fxml
@@ -3,47 +3,99 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="TOP_CENTER" fillHeight="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="456.0" prefWidth="979.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView prefHeight="274.0" prefWidth="257.0">
-        <columns>
-          <TableColumn minWidth="0.0" prefWidth="129.0" text="Code" />
-          <TableColumn prefWidth="127.0" text="Cours" />
-        </columns>
+      <BorderPane prefHeight="400.0" prefWidth="315.0">
+         <top>
+            <Label alignment="BOTTOM_CENTER" prefHeight="28.0" prefWidth="234.0" text="Liste des cours" textAlignment="JUSTIFY" BorderPane.alignment="CENTER">
+               <graphic>
+                  <Label />
+               </graphic>
+               <BorderPane.margin>
+                  <Insets bottom="10.0" left="-25.0" top="20.0" />
+               </BorderPane.margin>
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
+         </top>
+         <left>
+            <TableView prefHeight="271.0" prefWidth="256.0" BorderPane.alignment="CENTER_RIGHT">
+              <columns>
+                <TableColumn minWidth="0.0" prefWidth="128.0" text="Code" />
+                <TableColumn prefWidth="154.0" text="Cours" />
+              </columns>
+               <BorderPane.margin>
+                  <Insets left="10.0" />
+               </BorderPane.margin>
+            </TableView>
+         </left>
          <HBox.margin>
-            <Insets bottom="50.0" left="20.0" top="52.0" />
+            <Insets />
          </HBox.margin>
-      </TableView>
-      <VBox prefHeight="400.0" prefWidth="147.0" spacing="15.0">
+         <bottom>
+            <HBox prefHeight="51.0" prefWidth="254.0" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="15.0" />
+               </BorderPane.margin>
+               <children>
+                  <ComboBox prefHeight="25.0" prefWidth="98.0">
+                     <HBox.margin>
+                        <Insets left="25.0" top="15.0" />
+                     </HBox.margin>
+                  </ComboBox>
+                  <Button mnemonicParsing="false" text="charger">
+                     <HBox.margin>
+                        <Insets left="50.0" top="15.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+         </bottom>
+      </BorderPane>
+      <VBox cacheShape="false" prefHeight="400.0" prefWidth="316.0" spacing="14.0">
          <children>
-            <Label lineSpacing="15.0" text="Prenom" textAlignment="JUSTIFY" />
-            <Label graphicTextGap="6.0" lineSpacing="15.0" mouseTransparent="true" text="Nom" />
-            <Label lineSpacing="15.0" text="Email" textAlignment="JUSTIFY" wrapText="true" />
-            <Label text="Matricule" textAlignment="JUSTIFY" textOverrun="CENTER_ELLIPSIS" wrapText="true" />
+            <Label prefHeight="28.0" prefWidth="201.0" text="Formulaire d'inscription">
+               <VBox.margin>
+                  <Insets bottom="25.0" left="25.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
+            <Label text="Prenom">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Label>
+            <Label text="Nom" />
+            <Label text="Email" />
+            <Label text="Matricule" />
+            <VBox prefHeight="187.0" prefWidth="167.0" spacing="8.0">
+               <VBox.margin>
+                  <Insets bottom="80.0" left="70.0" top="-140.0" />
+               </VBox.margin>
+               <children>
+                  <TextField />
+                  <TextField />
+                  <TextField />
+                  <TextField />
+                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="85.0" text="envoyer">
+                     <VBox.margin>
+                        <Insets left="25.0" top="15.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets right="50.0" top="10.0" />
+               </padding>
+            </VBox>
          </children>
          <padding>
-            <Insets left="50.0" />
+            <Insets left="30.0" top="20.0" />
          </padding>
-         <HBox.margin>
-            <Insets right="-26.0" top="91.0" />
-         </HBox.margin>
-      </VBox>
-      <VBox prefHeight="400.0" prefWidth="135.0" spacing="8.0">
-         <children>
-            <TextField />
-            <TextField />
-            <TextField />
-            <PasswordField />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="117.0" text="Button">
-               <VBox.margin>
-                  <Insets left="10.0" top="10.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-         <HBox.margin>
-            <Insets top="86.0" />
-         </HBox.margin>
       </VBox>
    </children>
 </HBox>
